# Abstract_Virtual_Machine

./: CMakeLists.txt  General.cpp  General.hpp  Makefile  README.md  TaskAdd.cpp  TaskAdd.hpp  a.out  avm  logExceptions.txt  logInstructions.txt  main.cpp
AbstractVM/: AbstractVM.cpp  AbstractVM.hpp
AbstractVM_SingletonClass/: AbstractVM.cpp  AbstractVM.hpp
Lexer/: Lexer.cpp  Lexer.hpp
LogException/: LogException.cpp  LogException.hpp
LoggerException/: LoggerException.hpp
OperandFactory/: FactoryOperand.cpp  FactoryOperand.hpp
OperandFactoryClass/: FactoryOperand.cpp  FactoryOperand.hpp  OperandFactory.cpp  OperandFactory.hpp
OperandType/: IOperand.hpp  Operand.hpp
OperandTypeClasses/: Double_Operand.cpp  Double_Operand.hpp  Float_Operand.cpp  Float_Operand.hpp  IOperand.hpp  Int16_Operand.cpp  Int16_Operand.hpp  Int32_Operand.cpp  Int32_Operand.hpp  Int8_Operand.cpp  Int8_Operand.hpp  Operand.hpp  Templete_Operand.h  Templete_Operand.hpp
PrecisionHandlingClass/: PrecisionHandleClass.hpp
TaskManager/: TaskManager.cpp  TaskManager.hpp
src/AbstractVM/: AbstractVM.cpp  AbstractVM.hpp
src/General/: General.cpp  General.hpp
src/Lexer/: Lexer.cpp  Lexer.hpp
src/LogException/: LogException.cpp  LogException.hpp
src/OperandFactory/: OperandFactory.cpp  OperandFactory.hpp
src/OperandType/: IOperand.hpp  Operand.hpp
src/Parser/: Parser.cpp  Parser.hpp
src/TaskManager/: TaskManager.cpp  TaskManager.hpp
